home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: google-cloud-dns-cluster-issuer
  name: home-assistant
  namespace: home-assistant
spec:
  rules:
    - host: home-assistant.randombits.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  number: 8123
  tls:
  - hosts:
    - home-assistant.randombits.de
    secretName: home-assistant-cert
